fix alignment issue

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -85,6 +85,7 @@ p {
 
 .content-container {
     max-width: 728px;    
+    width: 100%;
 }
 
 .image-moderate {
